# smithy-rs

./: CHANGELOG.md  CHANGELOG.next.toml
.github/workflows/: canary.yml  claim-crate-names.yml  dry-run-release.yml  github-pages.yml  prod-release.yml  release.yml  update-sdk-next.yml
aws/: SDK_CHANGELOG.next.json
aws/sdk-codegen/: build.gradle.kts
aws/sdk/aws-models/: dynamodb.json  s3-tests.smithy  sso.json  sts.json
aws/sdk/integration-tests/: Cargo.toml
codegen-client-test/: build.gradle.kts
codegen-core/common-test-models/: custom-validation-exceptions-experimental.smithy  pokemon.smithy
codegen-endpoints/: build.gradle.kts
codegen-server-test/: build.gradle.kts
rust-runtime/: Cargo.toml
rust-runtime/aws-smithy-client/: Cargo.toml
rust-runtime/aws-smithy-client/src/: boxing.rs  builder.rs  counter.rs  http_connector.rs  hyper_ext.rs  lib.rs  retry.rs  timeout.rs  transparent.rs
rust-runtime/aws-smithy-client/tests/: e2e_test.rs
rust-runtime/aws-smithy-http-server/: Cargo.toml
rust-runtime/aws-smithy-http-server-python/: Cargo.toml
rust-runtime/aws-smithy-http-server-python/examples/: Makefile
rust-runtime/aws-smithy-http-server/examples/pokemon_service/: Cargo.toml
rust-runtime/aws-smithy-http-server/examples/pokemon_service/src/: main.rs  test_layer.rs
rust-runtime/aws-smithy-http-server/src/: handler.rs  (+2 more)
rust-runtime/aws-smithy-protocol-test/: Cargo.toml
tools/ci-build/: Dockerfile
tools/ci-scripts/: check-aws-config  check-aws-sdk-services  check-aws-sdk-smoketest-unit-tests  check-rust-runtimes  run-canary  run-canary.sh
(+134 files in other folders)
