[package]
name = "pokemon_service"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Smithy-rs Server Team <smithy-rs-server@amazon.com>"]
description = "A smithy Rust service to retrieve information about Pokémon."

[dependencies]
async-stream = "0.3"
aws-config = "0.46"
aws-sdk-config = "0.16"
aws-sdk-kms = "0.16"
aws-types = "0.46"
clap = { version = "~3.2.1", features = ["derive"] }
futures = "0.3"
http = "0.2"
hyper = {version = "0.14", features = ["server"] }
rand = "0.8"
tokio = "1"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

# Local paths
aws-smithy-http-server = { path = "../../" }
pokemon_service_sdk = { path = "../pokemon_service_sdk/" }

[dev-dependencies]
assert_cmd = "2.0"
home = "0.5"
serial_test = "0.7.0"
wrk-api-bench = "0.0.7"

# Local paths
aws-smithy-client  = { path = "../../../aws-smithy-client/", features = ["rustls"] }
pokemon_service_client = { path = "../pokemon_service_client/" }
